--- a/src/main/resources/templates/email/verificationCode.html
+++ b/src/main/resources/templates/email/verificationCode.html
@@ -7,28 +7,42 @@
 
 </head>
 <body>
-<div class="background" style="width:700px; height:525px; background:rgba(254,96,75,1); display:flex; flex-direction: column;">
-  <div style="width: 700px; display: flex; justify-content: center; margin-top: 10px;">
-    <img src='cid:logo'>
-  </div>
-  <div style="width: 700px;">
-    <div class="main" style="display: flex; flex-direction: column; margin-left: 50px; margin-right: 50px; margin-top:10px; background:#FFFFFF; position:relative; border:3px solid rgba(255,179,169,1);">
-      <div style="display: flex; justify-content: center; width: 600px; padding-top: 40px; padding-bottom: 30px;">
-        <img src='cid:title' style=" width:278px; justify-content: center;">
-      </div>
-      <div style="display: flex; justify-content: center; width: 600px;">
-        <img src='cid:text' style="width:289px;">
-      </div>
-      <div style="display: flex; justify-content: center; width: 600px; padding-top: 30px; padding-bottom: 10px;">
-        <div class="codeBody" style="display: flex; justify-content: center; width:500px; height:100px; background: rgba(255,179,169,0.3); border-radius:30px; ">
-          <p class="code" style="margin-top:35px; margin-bottom:35px; text-align:center; width:400px; font-size:20px; font-weight:bold;" th:text="${code}"></p>
-        </div>
-      </div>
-      <div style="display: flex; justify-content: center; width: 600px; padding-bottom: 40px;">
-        <p class="expirationTime" style=" text-align:center; font-size:11px; font-weight:bold;" th:text="${expirationTime}"></p>
-      </div>
-    </div>
-  </div>
+<div style="width:700px; height:525px; background:rgba(254,96,75,1);">
+  <table width="700" cellspacing="0" cellpadding="0" border="0" style="margin: 0 auto; padding-top: 10px;">
+    <tr>
+      <td align="center">
+        <img src="cid:logo" style="width: 208px;">
+      </td>
+    </tr>
+  </table>
+  <table width="700" cellspacing="0" cellpadding="0" border="0" style="margin: 0 auto; margin-top: 10px; background:#FFFFFF; border:3px solid rgba(255,179,169,1);">
+    <tr>
+      <td align="center" style="padding-top: 40px; padding-bottom: 30px;">
+        <img src="cid:title" style="width: 278px;">
+      </td>
+    </tr>
+    <tr>
+      <td align="center">
+        <img src="cid:text" style="width: 289px;">
+      </td>
+    </tr>
+    <tr>
+      <td align="center" style="padding-top: 30px; padding-bottom: 10px;">
+        <table width="500" height="100" cellspacing="0" cellpadding="0" border="0" style="background: rgba(255,179,169,0.3); border-radius: 30px;">
+          <tr>
+            <td align="center" style="font-size: 20px; font-weight: bold; text-align: center; vertical-align: middle;">
+              <p style="margin-top: 35px; margin-bottom: 35px;" th:text="${code}"></p>
+            </td>
+          </tr>
+        </table>
+      </td>
+    </tr>
+    <tr>
+      <td align="center" style="padding-bottom: 40px;">
+        <p style="text-align: center; font-size: 11px; font-weight: bold;" th:text="${expirationTime}"></p>
+      </td>
+    </tr>
+  </table>
 </div>
 </body>
 </html>
